# utilitycode

./: .bumpversion.cfg  .gitignore  CHANGELOG.rst  NOTICE  README.md  README.rst  configure  configure.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  utilitycode.ABOUT
.github/ISSUE_TEMPLATE/: roadmap-item-template.md
.github/workflows/: docs-ci.yml  main.yml
docs/source/: conf.py  index.rst  utilitycode_toc.rst
docs/source/_static/: theme_overrides-skeleton-2022-03-28.css
docs/source/_templates/: ansible_extrabody.html  breadcrumbs.html  footer.html  genindex.html  layout.html
docs/source/contribute/: contrib_doc.rst
docs/source/getting-started/: development.rst  index.rst  install.rst  requirements.rst
docs/source/utilitycode/: reporting.rst  scio.rst  spreadsheet_toolkit.rst  utilities.rst  vcio.rst
docs/source/utilitycode/reporting/: column-summary.rst  license-category.rst  license-reference.rst  scio-to-inv.rst  sctk-to-inventory.rst
docs/source/utilitycode/scio/: load_inventories.rst
src/deja/: api.py
src/reporting/: __init__.py  column_summary.py  license_category.py  license_ref.py  scio_to_inv.py  sctk_to_inventory.py
src/scio/: README  load_inventories.sh
src/spreadsheet_toolkit/: add_column_prefix.py  column_match.py  concat.py  copy_resource.py  csv_utils.py  filter.py  flatten.py  keep_column.py  remove_column.py  summarize.py  unflatten.py
src/utilitycode/: __init__.py  analyze_debian_status.py  analyze_gem.py  aosp_notice_xml_parser.py  bb_file_package_path.py  bom_checker.py  bom_utils.py  collect_binary_strings.py  copyright_to_holder.py  cpp_includes.py  debian_copyright_parser.py  debian_package_installed_list.py  extract_source_path_from_maps.py  file_cat.py  file_cat_resource.py  file_cat_rules.csv  inv_to_json.py  json_to_xlsx.py  lkm.py  normalize_license_expression.py  npm_package_analyzer.py  ort_analyzer_parser.py  package_management_file_parser.py  parse_nuspec.py  scio_messages_parser.py  system_file_index.py  unicode_to_ascii.py  utils.py
src/vcio/: __init__.py  vcio_report.py
tests/: test_analyze_debian_status.py  test_analyze_gem.py  test_aosp_notice_xml_parser.py  test_bb_file_package_path.py  test_bom_checker.py  test_bom_utils.py  test_collect_binary_strings.py  test_copyright_to_holder.py  test_cpp_includes.py  test_debian_copyright_parser.py  test_debian_package_installed_list.py  test_file_cat.py  test_inv_to_json.py  test_json_to_xlsx.py  test_lkm.py  test_npm_package_analyzer.py  test_package_management_file_parser.py  test_system_file_index.py  test_unicode_to_ascii.py  test_vcio_report.py
tests/data/aosp_notice/: notice.xml
tests/data/binary/: libaprutil-1.so.0.0.0
tests/data/bom_utils/: contains_macros.xlsx  count_headers.xlsx  count_sheets.xlsx  get_column.xlsx  headers.xlsx  input.xlsx  no_macros.xlsx
tests/data/cpp_includes/: test.cpp
tests/data/debian_copyright/: copyright
tests/data/debian_pacakge_md5sums/: test.md5sums
tests/data/debian_status/: status
tests/data/inv_to_json/: test.json  test.xlsx  test_cli-expected.json
tests/data/lkm/: test.cpp
tests/data/lock_files/: package_scancode.csv  package_scancode.json
tests/data/package_management_files/: 6in4.control  debug-3.1.0.json  expected_gem_lock-parsed.csv  expected_go_sum-parsed.csv  expected_package_lock-parsed-no_dev.csv  expected_package_lock-parsed.csv  expected_yarn_lock-parsed.csv  go.mod  go.sum  package-lock.json  requirements.txt
tests/data/system_file_index/: expected-packages-by-path.json  expected-paths-by-packages.json  expected.csv  test-in.csv  test-index-file
tests/data/vcio_report/: vcio_report-expected-output-multiple-input-purls.xlsx  vcio_report-expected-output-single-input-purl.xlsx  vcio_report-input-multiple-input-purls.txt  vcio_report-input-single-input-purl.txt  vcio_report-purl_vulns-multiple-input-purls.json  vcio_report-purl_vulns-single-input-purl.json
tests/reporting/: test_column_summary.py  test_license_category.py  test_license_ref.py  test_sctk_to_inventory.py
tests/spreadsheet_toolkit/: test_add_column_prefix.py  test_column_match.py  test_concat.py  test_copy_resource.py  test_filter.py  test_flatten.py  test_keep_column.py  test_remove_column.py  test_summarize.py  test_unflatten.py  testing_utils.py
(+67 files in other folders)
