[metadata]
name = utilitycode
author = nexB. Inc.
author_email = info@nexb.com
license = apache-2.0

description = A library to reliably extract and uncompress archives of many types.
long_description = file:README.rst
url = https://github.com/nexB/utilitycode
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities

license_files =
    NOTICE
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    scancode-toolkit[full]
    openpyxl
    click
    unicodecsv
    dockerfile-parse
    license-expression
    debut
    attrs
    univers

setup_requires = setuptools_scm[toml] >= 4
python_requires = >=3.7

[options.packages.find]
where = src


[options.extras_require]
dev =
    pytest >= 7.0.1
    pytest-xdist >= 2
    twine
    ruff
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton

[options.entry_points]
console_scripts =
    # Utilities
    analyze-debian = utilitycode.analyze_debian_status:cli
    analyze-gem = utilitycode.analyze_gem:cli
    aosp-notice-xml-parser = utilitycode.aosp_notice_xml_parser:cli
    bb_file_package_path = utilitycode.bb_file_package_path:cli
    binary_strings = utilitycode.collect_binary_strings:cli
    bom-checker = utilitycode.bom_checker:cli
    copyright_to_holder = utilitycode.copyright_to_holder:cli
    cpp_includes = utilitycode.cpp_includes:cli
    debut-copyright-parser = utilitycode.debian_copyright_parser:cli
    debian-package-list = utilitycode.debian_package_installed_list:cli
    extract_docker_extra_data = utilitycode.extract_docker_extra_data:cli
    extract_map = utilitycode.extract_source_path_from_maps:cli
    file-cat = utilitycode.file_cat:cli
    i2j = utilitycode.inv_to_json:cli
    json2xlsx = utilitycode.json_to_xlsx:cli
    lkm = utilitycode.lkm:cli
    normalize_license_expression = utilitycode.normalize_license_expression:cli
    npm_package_analyzer = utilitycode.npm_package_analyzer:cli
    pmf_parser = utilitycode.package_management_file_parser:cli
    nuget = utilitycode.analyze_nuget:nuget
    ort_analyzer_parser = utilitycode.ort_analyzer_parser:cli
    parse_nuspec = utilitycode.parse_nuspec:cli
    parse_rpm_db = utilitycode.parse_rpm_db:cli
    rpm = utilitycode.analyze_rpm:rpm
    scio_messages_parser = utilitycode.scio_messages_parser:cli
    sfi = utilitycode.system_file_index:cli
    unicode_to_ascii = utilitycode.unicode_to_ascii:cli

    # Reporting
    csum = reporting.column_summary:cli
    lcat = reporting.license_category:cli
    lcat_norm = reporting.license_category_normalization:cli
    lref = reporting.license_ref:cli
    sctk2inv = reporting.sctk_to_inventory:cli
    scio2inv = reporting.scio_to_inv:cli

    # spreadsheet_toolkit
    add_column_prefix = spreadsheet_toolkit.add_column_prefix:cli
    column_match = spreadsheet_toolkit.column_match:cli
    concat = spreadsheet_toolkit.concat:cli
    copy_resource = spreadsheet_toolkit.copy_resource:cli
    bom_filter = spreadsheet_toolkit.filter:cli
    flatten = spreadsheet_toolkit.flatten:cli
    keep_column = spreadsheet_toolkit.keep_column:cli
    remove_column = spreadsheet_toolkit.remove_column:cli
    summarize = spreadsheet_toolkit.summarize:cli
    unflatten = spreadsheet_toolkit.unflatten:cli

    # vcio-audit
    vcio_report = vcio.vcio_report:cli

[tool:pytest]
norecursedirs =
    .git
    .tox
    dist
    build
    thirdparty
    local
    ci
    docs
    etc
    Include
    include
    Lib
    lib
    bin
    Scripts
    tmp
    .cache
    data
    src/data
    tests/data
    tests/ignore
    tests/Ignore
    tests/ignore/

[doc8]
ignore-path = docs/build, docs/_build


python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfEsxX
    --strict-markers
    -s
    -vv
    --ignore docs/conf.py
    --ignore setup.py
    --doctest-modules
